--- a/04-shape.Rmd
+++ b/04-shape.Rmd
@@ -2,7 +2,7 @@
 
 Establishing the optimal shape of development.
 
-```{r read data 03, eval=F}
+```{r read data shape, eval=F}
 #single.cohort = read.csv(paste0(datadir,'02-single-cohort.csv'))
 
 #multiple.cohort = read.csv(paste0(datadir,'01-abcd.csv'))
