--- a/external/hitchhikers-guide-packages.bib
+++ b/external/hitchhikers-guide-packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2021},
+  year = {2020},
   url = {https://www.R-project.org/},
 }
 
@@ -19,7 +19,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2021},
-  note = {R package version 0.7.10},
+  note = {R package version 0.7.9},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -52,8 +52,8 @@
 Systat, Weka, dBase, ...},
   author = {{R Core Team}},
   year = {2020},
-  note = {R package version 0.8-81},
-  url = {https://svn.r-project.org/R-packages/trunk/foreign/},
+  note = {R package version 0.8-75},
+  url = {https://CRAN.R-project.org/package=foreign},
 }
 
 @Manual{R-gamm4,
@@ -84,7 +84,7 @@ Systat, Weka, dBase, ...},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.36},
+  note = {R package version 1.34},
   url = {https://yihui.org/knitr/},
 }
 
@@ -125,7 +125,7 @@ Systat, Weka, dBase, ...},
 Estimation},
   author = {Simon Wood},
   year = {2021},
-  note = {R package version 1.8-38},
+  note = {R package version 1.8-36},
   url = {https://CRAN.R-project.org/package=mgcv},
 }
 
@@ -158,7 +158,7 @@ Analyses in Mplus},
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester},
   year = {2021},
-  note = {R package version 2.0.2},
+  note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -166,7 +166,7 @@ Analyses in Mplus},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
-  note = {R package version 2.11},
+  note = {R package version 2.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -199,7 +199,7 @@ Output},
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.6},
+  note = {R package version 3.1.4},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
@@ -207,7 +207,7 @@ Output},
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham},
   year = {2021},
-  note = {R package version 1.1.4},
+  note = {R package version 1.1.3},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
